infra/istio/overlays/audit/destinationrule-audit.yml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: audit
  namespace: sis
spec:
  host: audit
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
