infra/istio/overlays/audit/virtualservice-audit.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: audit
  namespace: sis
spec:
  hosts:
  - audit
  http:
  - route:
    - destination:
        host: audit
        port:
          number: 3005
