infra/istio/overlays/audit/authorizationpolicy-audit-allow-identity.yml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: audit-allow-identity
  namespace: sis
spec:
  selector:
    matchLabels:
      app: audit
  action: ALLOW
  rules:
  - from:
    - source:
        principals: ["cluster.local/ns/sis/sa/identity-sa"]
